[tool.poetry]
authors = ["Eric Lee <ericstone.dev@gmail.com>"]
description = ""
name = "kuri-docker-ks-supervisor"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^3.2.4"
Pillow = "^8.2.0"
aioredis = "2.0.0a1"
aliyun-mns-sdk = "^1.1.6"
argon2-cffi = "^20.1.0"
boto3 = "^1.17.93"
celery = "^5.1.0"
cryptography = "^3.4.7"
django-celery-beat = "^2.2.0"
django-celery-results = "^2.0.1"
django-cors-headers = "^3.7.0"
django-environ = "^0.4.5"
django-filter = "^2.4.0"
django-model-utils = "^4.1.1"
django-oauth-toolkit = "^1.5.0"
django-redis = "^5.0.0"
django-storages = "^1.11.1"
django-taggit = "^1.5.1"
djangorestframework = "^3.12.4"
fastapi = "^0.65.2"
fastapi-cache2 = { version = "^0.1.3", extras = ["redis"] }
hiredis = "^2.0.0"
httpx = "^0.18.1"
openpyxl = "^3.0.7"
pandas = "^1.3.0"
psycopg2-binary = "^2.8.6"
python = "^3.9"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
python-multipart = "^0.0.5"
python-slugify = "^5.0.2"
redis = "^3.5.3"
requests = "^2.25.1"
shortuuid = "^1.0.1"
supervisor = "^4.2.2"
uvicorn = "^0.14.0"
wechatpy = { version = "^1.8.15", extras = ["cryptography"] }
xlrd = "^2.0.1"
django-ckeditor = "^6.2.0"
ks-shared = {git = "https://github.com/ericstone57/ks_shared.git", rev = "main"}

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.1"
django-extensions = "^3.1.1"
factory-boy = "^3.2.0"
jupyterlab = "^3.0.16"
whitenoise = "^5.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
